# FitplayEngine

./: .bazelrc  .gitignore  .gitmodules  README.md  WORKSPACE  build_ios.sh  build_npm.sh  build_wasm.sh  package-lock.json  package.json  run.sh  run_build.sh  run_ci_test.sh  run_client.sh
app/: app.js  walk.csv  (+3 more)
modules/: CMakeLists.txt  README.md
modules/demo/: CMakeLists.txt  README.md  midware.js  midware_class.js  midware_func.js  midware_test.js
modules/demo/src/: develop.cc  develop_class.cc  develop_func.cc  test.cc
modules/demo/test/: mock_pose_data.js
modules/include/: package-lock.json
modules/include/actionDetection/: actionDetectionCalculator.hpp  actionDetectionComponent.hpp  actionDetectionData.hpp  actionDetectionManager.hpp  euroFilter.hpp  jumpData.hpp  jumpDetection.hpp  squatDetection.hpp  walkData.hpp  walkDetection.hpp  walkDetection_v2.hpp
modules/include/fitting/: fitting.hpp  fitting_component.hpp  fitting_data.hpp  fitting_fk.hpp  fitting_landmark.hpp  fitting_rgbd.hpp
modules/include/flatbuffer/: actionData.fbs  actionData.ts  actionData_generated.h  buffer_gen.sh  featureConfig.fbs  featureConfig.ts  featureConfig_generated.h  flatc  imuData.fbs  imuData_generated.h  jumpData.fbs  package-lock.json  poseData.fbs  poseData.ts  poseData_generated.h  test.fbs  test_generated.h  tsconfig.json  walkData.fbs  walkData_generated.h
modules/legacy/: midware_class.js  midware_func.js
modules/src/: bridgeClass.cc  jumpDetection.cc  walkDetection.cc
modules/test/: CMakeLists.txt  index.html  mock_pose_data.js  run_test.sh  stand.json
(+322 files in other folders)
