cmake_minimum_required(VERSION 3.15)
project(processor)
include_directories(vendor include)
set(EXECUTABLE_OUTPUT_PATH ../../app/wasm_modules)
add_executable(processor src/bridgeClass.cc)
set_target_properties(processor PROPERTIES LINK_FLAGS "--bind -s \"EXTRA_EXPORTED_RUNTIME_METHODS=['addOnPostRun']\"")